hphp/hack/test/typecheck/constraints/type_constant_nast.php.exp
File "type_constant_nast.php", line 8, characters 27-38:
Some type constraint(s) here are violated (Typing[4323])
File "type_constant_nast.php", line 7, characters 19-19:
'T' is a constrained type parameter
File "type_constant_nast.php", line 7, characters 24-25:
Expected I2
File "type_constant_nast.php", line 9, characters 19-20:
But got I1
File "type_constant_nast.php", line 8, characters 30-37:
  resulting from expanding the type constant this::TI
File "type_constant_nast.php", line 8, characters 30-37:
Typing error (Typing[4110])
File "type_constant_nast.php", line 7, characters 24-25:
Expected I2
File "type_constant_nast.php", line 9, characters 19-20:
But got I1
File "type_constant_nast.php", line 8, characters 30-37:
  resulting from expanding the type constant this::TI
